fix table overflow on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,7 +36,7 @@
   }
 
   table {
-    @apply min-w-full divide-y divide-gray-200 dark:divide-neutral-700;
+    @apply block overflow-x-auto md:table min-w-full divide-y divide-gray-200 dark:divide-neutral-700;
   }
 
   tbody {
